2014-06-15 Sun  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildPatchFileList): Disregard
	files in */tmp/* or /*.tmp/* directories

2014-06-14 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildInstallExtraBinFiles): Ignore
	*.tmp files. Do not remote extension. Add support for
	bin/FILE.cyginstdir install instructions for FILE. See
	HELP::OPTIONAL EXTERNAL DIRECTORIES::bin/ for more information.

	* bin/lib/cygbuild.pl: (HELP::OPTIONAL EXTERNAL DIRECTORIES):
	Document bin/ and patches/ directories.

2014-06-13 Fri  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildObjDumpLibraryDepList): Ignore MPR.dll.
	(CygbuildPreRemoveWrite): chmod 755.

2014-06-12 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl: (HELP::OPTIONAL EXTERNAL FILES):
	Document delete.lst

2014-06-10 Tue  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: Update find option -perm +111 to newer
	  -perm /u+x,g+x,o+x search.

2014-04-16 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl (BinPkgListing): Change to --xz option.

        * bin/cygbuild.sh:
        - Chnage default package extension from bz2 to xz.
        (CygbuildFileConvertToUnix): Skip .xz files.
        (CygbuildCommandMain): Chnage from bz2 to xz.
        (CygbuildDefineGlobalMain): New variable NAME_PKG_EXT=xz.
        (CygbuildCompressTarOpt): New.
        (CygbuildCmdPkgBinaryStandard): Call CygbuildCompressTarOpt()
        and don't hard code -jcf, but obey COMPRESS_OPTION variable.
        (CygbuildCmdPkgSourceStandard):  Call CygbuildCompressTarOpt()
        and don't hard code -jcf.

2014-04-10 Thu  Jari Aalto  <jari.aalto@cante.net>

        * bin/lib/libcheck.sh: (CygbuildCmdInstallCheckDirStructure):
        Adjust /bin directory message.

        * bin/lib/cygbuild.pl: (Help::OPTIONS): Document --xz option.

        * bin/cygbuild.sh: (CygbuildBootVariablesGlobalMain): Add
        .xz to cygbuild_opt_exclude_archive_files.